tests/golden/type_errors/re_export_duplicate_local.cd
let value = 1;
export value;
export value from "../re_export_direct/lib.cd";
