tests/golden/type_errors/re_export_duplicate_local.err
Type error at <repo>/tests/golden/type_errors/re_export_duplicate_local.cd:3:8: duplicate export `value`
